--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,5 +6,13 @@
 </head>
 <body>
 
+<form action = "http://localhost:8080/Lab24/newuser.html" align="center">
+<input type="submit" value = "New User">
+</form>
+
+<form action = "http://localhost:8080/Lab24/listusers.jsp" align="center">
+<input type="submit" value = "List User">
+</form>
+
 </body>
 </html>
