made some front end changes and added a .gitignore to the project

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,6 +5,7 @@
 <title>Index</title>
 </head>
 <body>
+<h1 align = "center" > Welcome to the Best Admin System Ever</h1>
 
 <form action = "http://localhost:8080/Lab24/newuser.html" align="center">
 <input type="submit" value = "New User">
